flex/flex-tests/testData/js2_highlighting/MissingReturnArgument.js2
class Foo {}
function foo():Foo {
  if (false) <error descr="Return value of type Foo is required">return;</error>
  return new Foo();
}